<resources>
    <string name="app_name">Movie Catalogue</string>
    <string name="title_movies">Judul Film</string>
    <string name="synopsis_movie">Lorem ipsum dolor sit amet</string>
    <string name="object_received">Object diterima</string>
    <string name="tv_object_judul">Judul</string>
    <string name="object_synopsis">lorem ipsum dolor sit amet</string>
    <string name="object_photo">object_photo</string>
    <string name="photo">photo</string>
    <string-array name="data_title">
        <item>Star Wars: The Rise of Skywalker</item>
        <item>Avengers: Endgame</item>
        <item>Zombieland: Double Tap</item>
        <item>Toy Story 4</item>
        <item>Spider-Man: Far From Home</item>
        <item>Frozen II</item>
        <item>Knives Out</item>
        <item>Maleficent: Mistress of Evil</item>
        <item>Joker</item>
        <item>John Wick: Chapter 3 – Parabellum</item>
    </string-array>
</resources>