<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:layout_marginRight="10dp"
    android:layout_marginLeft="10dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <LinearLayout
        android:id="@+id/img_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true">

        <ImageView
            android:id="@+id/tv_object_photo"
            android:layout_width="120dp"
            android:layout_height="180dp"
            android:scaleType="centerInside"
            android:contentDescription="@string/object_photo" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_object_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_container"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:text="@string/tv_object_judul"
        android:textStyle="bold"
        android:textSize="20sp"/>
    <TextView
        android:id="@+id/sysnopsis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_object_title"
        android:layout_marginTop="10dp"
        android:text="Synopsis"
        android:textStyle="bold"
        android:textSize="18sp"/>
    <TextView
        android:id="@+id/tv_object_synopsis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sysnopsis"
        android:layout_marginTop="10dp"
        android:text="@string/object_synopsis"
        android:textSize="16sp"/>
    </RelativeLayout>

</ScrollView>